@@ -1,3 +1,12 @@
+2012-10-09  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
+	Remove a grossly heuristic list view hack.
+
+	* src/pkglist.cpp (pkgListViewMaker::GetTitle): Remove code for the
+	heuristic deletion of any redundant package name prefixes from package
+	title attributes; by now, all such prefixes should have been removed
+	from the catalogue, explicitly, at source.
+
 2012-10-08  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
 	Implement GUI list view compiler for XML catalogue.
